--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test</title>
+</head>
+<body>
 
-<html>
-    <head><title>Inlämningsuppgift - HTML & CSS</title></head>
-    <body>
-
-    </body>
+</body>
 </html>
