--- a/learning.html
+++ b/learning.html
@@ -12,6 +12,7 @@
 </head>
 
     <body>
+        <!-- Block Element -->
         <h1>Test</h1>
         <div class="border">DIV</div>
         <p class="border">Paragraph</p>
@@ -21,8 +22,16 @@
         <h4 class="border">H4</h4>
         <h5 class="border">H5</h5>
         <h6 class="border">H6</h6>
-        <header class="border">HEADER</header>
         
-       
+        <header class="border">HEADER</header>
+        <section class="border">SECTION</section>
+        <main class="border">MAIN</main>
+        <nav class="border">NAV</nav>
+        <aside class="border">ASIDE</aside>
+        <article class="border">ARTICLE</article>
+        <footer class="border">FOOTER</footer>
+
+
+
     </body>
 </html>
