update, this is going to be deleted later.

--- a/learning.html
+++ b/learning.html
@@ -13,7 +13,7 @@
 
     <body>
         <!-- Block Element -->
-        <h1>Test</h1>
+        
         <div class="border">DIV</div>
         <p class="border">Paragraph</p>
         <h1 class="border">H1</h1> 
@@ -31,7 +31,14 @@
         <article class="border">ARTICLE</article>
         <footer class="border">FOOTER</footer>
 
+        <br>
+        <br>
+        <br>
 
+        <!-- Inline Element -->
+        <a class="border" href="learn1.html">Länk</a>
+        <span class="border">SPAN</span>
+        
 
     </body>
 </html>
