--- a/learning.html
+++ b/learning.html
@@ -38,7 +38,23 @@
         <!-- Inline Element -->
         <a class="border" href="learn1.html">Länk</a>
         <span class="border">SPAN</span>
-        
+        <em class="border">Emphasize</em>
+        <bold class="border">Bold</bold>
+        <strong class="border">Strong</strong>
+
+        <br/>
+        <br/>
+
+        <ul>
+            <li>Unordered List Item</li>
+            <li>Unordered List Item</li>
+            <li>Unordered List Item</li>
+        </ul>
+        <ol>
+            <li>Ordered List Item</li>
+            <li>Ordered List Item</li>
+            <li>Ordered List Item</li>
+        </ol>
 
     </body>
 </html>
