--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <title>Uppgift 1</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
-<body>
-    <div class="bgcolor1">
-        <img src="/i" alt="">
-        <div>test</div>
+<body class="bgcolor">
+    <div>Navbar Field</div>
+    <div>
+        <img src="/images/headerbg.svg" alt="Header Background Image">
     </div>
-    <div class="bgcolor2"><div>test</div></div>
-    <div class="bgcolor1"><div>test</div></div>
-    <div class="bgcolor2"><div>test</div></div>
-    <div class="bgcolor1"><div>test</div></div>
-    <div class="bgcolor2"><div>test</div></div>
-    <div class="bgcolor1"><div>test</div></div>
-    <div class="bgcolor2"><div>test</div></div>
+    <div>Features Field 1</div>
+    <div>
+        <img src="/images/sliderbg.svg" alt="Slider Bacground Image">
+    </div>
+    <div>Features Field 3</div>    
+    <div>
+        <img src="/images/testimonialsbg.svg" alt="Testimonials Background Image">
+    </div>
+    <div>FAQ Field</div>
+    <div>Subscribe Field</div>
+    <div>Footer Field</div>
+
 </body>
 </html>
