Added the start of the teachers version and changed where the initial files is found.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uppgift 1</title>
-    <link rel="stylesheet" href="/styles.css">
+    <!-- Länkar samt länkträd taget från Tips & Trix videon -->
+    <link rel="stylesheet" href="https://kit.fontawesome.com/a576612222.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
+    <title>Silicon</title>
 </head>
 <body class="font">
     
