Added pictures & teacher code

--- a/index.teacher.version.html
+++ b/index.teacher.version.html
@@ -8,6 +8,35 @@
     <title>Silicon</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+
+            <a id="logo" href="index.html"><img src="images/silicon-logo-solid.svg" alt="Silicon Logotype"></a>
+
+            <nav id="main-menu" class="navbar">
+                <a class="nav-link" href="#">Features</a>
+            </nav>
+        
+            <div id="darkmode-toggle-switch" class="btn-toggle-switch">
+                <span class="label">Dark mode</span>
+                <label for="darkmode-switch" class="toggle-switch">
+                    <input id="darkmode-switch" type="checkbox">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+
+            <button>
+            <a id="auth-sign-create" href="#" class="btn-primary">
+                <i class="fa-regular fa-user"></i>
+                <span>Sign in / up</span>
+            </a>
+            </button>
+
+            <button class="btn-mobile">
+                <i class="fa-light fa-bars"></i>
+            </button>
+
+        </div>
+    </header>
 </body>
 </html>
