--- a/index.teacher.version.html
+++ b/index.teacher.version.html
@@ -26,7 +26,7 @@
             </div>
 
             <button>
-            <a id="auth-sign-create" href="#" class="btn-primary">
+            <a id="auth-signin-create" href="#" class="btn-primary">
                 <i class="fa-regular fa-user"></i>
                 <span>Sign in / up</span>
             </a>
