Changed folders and divided the pictures into light and dark versions, and added more code.

--- a/index.teacher.version.html
+++ b/index.teacher.version.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://kit.fontawesome.com/a576612222.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.teacher.version.css">
     <title>Silicon</title>
 </head>
 <body>
     <header>
+        <!-- Navigation Bar -->
         <div class="container">
 
             <a id="logo" href="index.html"><img src="images/silicon-logo-solid.svg" alt="Silicon Logotype"></a>
@@ -25,18 +26,24 @@
                 </label>
             </div>
 
-            <button>
             <a id="auth-signin-create" href="#" class="btn-primary">
                 <i class="fa-regular fa-user"></i>
                 <span>Sign in / up</span>
             </a>
-            </button>
 
             <button class="btn-mobile">
-                <i class="fa-light fa-bars"></i>
+                <i class="fa-regular fa-bars"></i>
             </button>
 
         </div>
     </header>
+    
+    <!-- Showcase Section -->
+    <section class="container">
+
+
+
+    </section>
+
 </body>
 </html>
