--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
 
         <main>
 
+            <!-- BRAND LOGO SECTION -->
+             
+            <!-- Pre-School Guidance Material Code - I wanted to see what I was capable of creating out of memory first. -->
+            <!-- <section class="container">
+                <div class="brands">
+                    <a id="brand-1" href="#"><img src="/images/tablet+/brand-1.svg" alt="Brand Logo 1"></a>
+                    <a id="brand-2" href="#"><img src="/images/tablet+/brand-2.svg" alt="Brand Logo 2"></a>
+                    <a id="brand-3" href="#"><img src="/images/tablet+/brand-3.svg" alt="Brand Logo 3"></a>
+                    <a id="brand-4" href="#"><img src="/images/tablet+/brand-4.svg" alt="Brand Logo 4"></a>
+                    <a id="brand-5" href="#"><img src="/images/desktop/brand-5.svg" alt="Brand Logo 5"></a>
+                    <a id="brand-6" href="#"><img src="/images/desktop/brand-6.svg" alt="Brand Logo 6"></a>
+                </div>
+            </section> -->
+            <!-- School Guidance Material Code -->
         </main>
 
         <!-- Footer is recreated from school guidance material (Tips & Trix video) -->
