Brand Logo section created from school guidance material

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="wrapper">
 
         <header>
+            <!------------------------------------------------------------------- NAVIGATION BAR SECTION -->
+            <!-- NAVIGATION BAR SECTION --> <!-- School Guidance Material Code -->
             <!-- Navigation Bar is mainly recreated from school guidance material. (Tips & Trix video) -->
             <div class="container">
     
@@ -45,22 +47,36 @@
 
         <main>
 
-            <!-- BRAND LOGO SECTION -->
-             
-            <!-- Pre-School Guidance Material Code - I wanted to see what I was capable of creating out of memory first. -->
-            <!-- <section class="container">
-                <div class="brands">
-                    <a id="brand-1" href="#"><img src="/images/tablet+/brand-1.svg" alt="Brand Logo 1"></a>
-                    <a id="brand-2" href="#"><img src="/images/tablet+/brand-2.svg" alt="Brand Logo 2"></a>
-                    <a id="brand-3" href="#"><img src="/images/tablet+/brand-3.svg" alt="Brand Logo 3"></a>
-                    <a id="brand-4" href="#"><img src="/images/tablet+/brand-4.svg" alt="Brand Logo 4"></a>
-                    <a id="brand-5" href="#"><img src="/images/desktop/brand-5.svg" alt="Brand Logo 5"></a>
-                    <a id="brand-6" href="#"><img src="/images/desktop/brand-6.svg" alt="Brand Logo 6"></a>
+            <!------------------------------------------------------------------- BRAND LOGO SECTION -->
+            <!-- BRAND LOGO SECTION --> <!-- School Guidance Material Code -->
+            <!-- Brand bar code is recreated from school guidance material (Tips & Trix video) -->
+             <section id="brands">
+                <div class="container">
+                    <div id="brand-1" class="brand-box">
+                        <img src="images/tablet+/brand-1.svg" alt="Brand Logo 1">
+                    </div>
+                    <div id="brand-2" class="brand-box">
+                        <img src="images/tablet+/brand-2.svg" alt="Brand Logo 2">
+                    </div>
+                    <div id="brand-3" class="brand-box">
+                        <img src="images/tablet+/brand-3.svg" alt="Brand Logo 3">
+                    </div>
+                    <div id="brand-4" class="brand-box">
+                        <img src="images/tablet+/brand-4.svg" alt="Brand Logo 4">
+                    </div>
+                    <div id="brand-5" class="brand-box">
+                        <img src="images/desktop/brand-5.svg" alt="Brand Logo 5">
+                    </div>
+                    <div id="brand-6" class="brand-box">
+                        <img src="images/desktop/brand-6.svg" alt="Brand Logo 6">
+                    </div>
                 </div>
-            </section> -->
-            <!-- School Guidance Material Code -->
+             </section>
+
         </main>
 
+        <!------------------------------------------------------------------- FOOTER SECTION -->
+        <!-- FOOTER SECTION --> <!-- School Guidance Material Code -->
         <!-- Footer is recreated from school guidance material (Tips & Trix video) -->
         <footer>
             <div class="container">
