--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             } else {
                 logo.src = "/images/light/logo/silicon-text-light.svg";
             }
-
+            /* Copied this segment and changed it in order to change the burger-menu image. */
             var navigation = document.getElementById('burger-menu');
             if (element.classList.contains('dark-mode')) {
                 navigation.src = "/images/dark/icons/button-toggle-navigation-dark.svg";
