--- a/index.html
+++ b/index.html
@@ -120,19 +120,35 @@
             var element = document.body;
             element.classList.toggle("dark-mode");
 
+            /* This part changes the picture for the Silicon logo in the navigation bar. */
             var logo = document.getElementById('logo-text');
             if (element.classList.contains('dark-mode')) {
                 logo.src = "/images/dark/logo/silicon-text-dark.svg";
             } else {
                 logo.src = "/images/light/logo/silicon-text-light.svg";
             }
-            /* Copied this segment and changed it in order to change the burger-menu image. */
+            /* This part changes the hamburger-menu image in the navigation bar. */
             var navigation = document.getElementById('burger-menu');
             if (element.classList.contains('dark-mode')) {
                 navigation.src = "/images/dark/icons/button-toggle-navigation-dark.svg";
             } else {
                 navigation.src = "/images/light/icons/button-toggle-navigation-light.svg";
             }
+            /* This part changes the AppStore picture in the Appstore button. */
+            var appstore = document.getElementById('appstore-logotype');
+            if (element.classList.contains('dark-mode')) {
+                appstore.src = "/images/dark/market/appstore-dark.svg";
+            } else {
+                appstore.src = "/images/light/market/appstore-light.svg";
+            }
+            /* This part changes the PlayStore picture in the PlayStore button. */
+            var playstore = document.getElementById('playstore-logotype');
+            if (element.classList.contains('dark-mode')) {
+                playstore.src = "/images/dark/market/googleplay-dark.svg";
+            } else {
+                playstore.src = "/images/light/market/googleplay-light.svg";
+            }
+
         }
 
         // Get the checkbox element
