Added mobile "app features" configurations for mobile. It's very broken atm.

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <section id="app-features">
                 <div class="container app-features-grid">
                         <div class="app-features-info">
-                            <h1>App Features</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+                            <h1 id="af-title">App Features</h1>
+                            <p id="af-title-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
                         </div>
                             
                     <div class="features-grid">
