--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
 
             <div id="grad" class="grad" >
-                <header>
+                <header id="sticky-header">
                     <!------------------------------------------------------------------- NAVIGATION BAR SECTION -->
                     <!-- NAVIGATION BAR SECTION --> <!-- School Guidance Material Code -->
                     <!-- Navigation Bar is mainly recreated from school guidance material. (Tips & Trix video) -->
@@ -277,6 +277,18 @@
         darkModeSwitch.addEventListener('change', function() {
             darkMode();  // Call the darkMode function whenever the checkbox is toggled
         });
+
+        /* This part changes the colour of the navigation bar from transparent to a solid colour. */
+        window.addEventListener('scroll', function() {
+            const header = document.getElementById('sticky-header');
+            if (window.scrollY > 50) { // Adjust the value to determine when the background should change
+                header.classList.add('scrolled');
+            } else {
+                header.classList.remove('scrolled');
+            }
+        });
+
+
     </script>
 
 </body>
