Changed colours and given some of the tedious objects extra ID's dark-mode almost works as it should now. There's a bug where the marketplace logos isn't switched out.

--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
             <section id="hero" class="first-section bg-gradient">
                 <div class="container">
                     <div class="headline">
-                        <h1>Manage all Your<span class="tablet-line-break"><br/></span> Money in One App</h1>
+                        <h1 id="sc-title">Manage all Your<span class="tablet-line-break"><br/></span> Money in One App</h1>
                     </div>
                     <div class="content">
-                        <p>
+                        <p id="sc-text">
+                        <!-- <p> -->
                             We offer you a new generation of the mobile banking. <span class="tablet-line-break"><br/></span> Save, spend & manage money in your pocket.
                         </p>
                         <div class="buttons">
