'Lighthouse' gives me 67 performance. So I'm trying to fix that and figure out why, so there are multiple small changes being done.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <nav id="main-menu" class="navbar">
                 <a class="nav-link" href="#">Features</a>
             </nav>
-            <div id="darkmode-toggle-switch" class="btn-toggle-switch">
+            <div id="darkmode-toggle-switch" class="btn-toggle-switch" description="dark mode switch">
                 <span class="label">Dark mode</span>
                 <label for="darkmode-switch" class="toggle-switch">
                     <input id="darkmode-switch" type="checkbox">
@@ -58,7 +58,7 @@
             <section id="showcase" class="first-section bg-gradient">
                 <div class="container">
                     <div class="headline">
-                        <h1 id="sc-title">Manage all Your<span class="tablet-line-break"><br/></span> Money in One App</h1>
+                        <h1>Manage all Your <br/> Money in One App</h1>
                     </div>
                     <div class="content">
                         <p id="sc-text">
@@ -120,7 +120,7 @@
             <section id="app-features">
                 <div class="container flexit">
 
-                    <img id="af-phone" src="/images/desktop/af-phone.svg" alt="">
+                    <img id="af-phone" src="/images/desktop/af-phone.svg" alt="iphone 12 pro">
 
                     <div class="app-features-grid">
                         <div class="app-features-info">
