added a meta description tag, changed the text color in various places.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Silly-con has time-robbing features, so don't put too much effort into it. . .">
+
     <link rel="shortcut icon" href="/images/silicon-favicon.ico" type="image/x-icon">
     <!-- Links are from a school guidance material (Tips & Trix video) -->
     <link rel="stylesheet" href="https://kit.fontawesome.com/a576612222.css" crossorigin="anonymous">
@@ -58,7 +61,7 @@
             <section id="showcase" class="first-section bg-gradient">
                 <div class="container">
                     <div class="headline">
-                        <h1>Manage all Your <br/> Money in One App</h1>
+                        <h1>Manage all Your<br/>Money in One App</h1>
                     </div>
                     <div class="content">
                         <p id="sc-text">
@@ -69,7 +72,7 @@
                             <a class="btn-download-app" href="#"><img id="appstore" src="/images/light/market/appstore-light.svg" alt="appstore"></a>
                             <a class="btn-download-app" href="#"><img id="playstore" src="/images/light/market/googleplay-light.svg" alt="playstore"></a>
                         </div>
-            
+
                         <a href="#" class="discover-more">
                             <span class="btn-circle">
                                 <i class="fa-solid fa-chevron-down"></i>
