Created a basic carousel  structure.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 </div>    
             </section>
 
-            <section id="carousel" class="bg-gradient">
+            <!-- <section id="carousel" class="bg-gradient">
                 <div class="container">
 
                     <div class="phone-carousel">
@@ -257,15 +257,15 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
 
             <!-- ChatGPT Versionen -->
-            <section id="grid-container">
+            <!-- <section id="grid-container">
                 <div class="grid">
                     <div class="grid-item" id="item-1" draggable="true">
                         <div class="image-layers">
-                            <img src="path/to/layer1-1.jpg" alt="Layer 1" class="layer layer-1">
+                            <img src="" alt="Layer 1" class="layer layer-1">
                             <img src="path/to/layer2-1.jpg" alt="Layer 2" class="layer layer-2">
                             <img src="path/to/layer3-1.jpg" alt="Layer 3" class="layer layer-3">
                         </div>
@@ -285,8 +285,23 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
+
+            <section class="carousel">
+                <div class="carousel-title">
+                    <h2>How Does It Work?</h2>
+                </div>
+                <section id="carousel-grid-container">
+
+                </section>
+                <div class="carousel-text-container">
+                    <h3>Transfers to people from your contact list</h3>
+                    <p>Proin volutpat mollis egestas. Nam luctus facilisis
+                        ultrices. Pellentesque volutpat ligula est. Mattis
+                        fermentum, at nec lacus.</p>
+                </div>
+            </section>
 
 
 
