got it to position as it should, and the css file is structured up to look like the html structure.

--- a/index.html
+++ b/index.html
@@ -302,22 +302,22 @@
                                 <div id="carousel-item" class="carousel-item" draggable="true">
                                     
                                     <div class="image-layers">
-                                        <img src="/images/carousel/mobile/mobile-layer_1.svg" alt="layer 1" class="layer layer-1">
-                                        <img src="/images/carousel/desktop/desktop-layer-2-1.svg" alt="layer 2" class="layer layer-2"></img>
-                                        <img src="/images/carousel/desktop/desktop-mask-layer_1.svg" alt="layer 3" class="layer layer-3"></img>
-                                        <img src="/images/carousel/desktop/desktop-layer_3.svg" alt="layer 4" class="layer layer-4"></img>
+                                        <img id="image-1" src="/images/carousel/mobile/mobile-layer_1.svg" alt="layer 1" class="layer layer-1"></img>
+                                        <img id="image-2" src="/images/carousel/desktop/desktop-layer-2-1.svg" alt="layer 2" class="layer layer-2"></img>
+                                        <img id="image-3" src="/images/carousel/desktop/desktop-mask-layer_1.svg" alt="layer 3" class="layer layer-3"></img>
+                                        <img id="image-4" src="/images/carousel/desktop/desktop-layer_3.svg" alt="layer 4" class="layer layer-4"></img>
                                     </div>    
                                     <div class="image-layers">
-                                        <img src="/images/carousel/mobile/mobile-layer_1.svg" alt="layer 1" class="layer layer-1">
-                                        <img src="/images/carousel/desktop/desktop-layer-2-2.svg" alt="layer 2" class="layer layer-2"></img>
-                                        <img src="/images/carousel/desktop/desktop-mask-layer_1.svg" alt="layer 3" class="layer layer-3"></img>
-                                        <img src="/images/carousel/desktop/desktop-layer_3.svg" alt="layer 4" class="layer layer-4"></img>
+                                        <img id="image-5" src="/images/carousel/mobile/mobile-layer_1.svg" alt="layer 1" class="layer layer-1"></img>
+                                        <img id="image-6" src="/images/carousel/desktop/desktop-layer-2-2.svg" alt="layer 2" class="layer layer-2"></img>
+                                        <img id="image-7" src="/images/carousel/desktop/desktop-mask-layer_1.svg" alt="layer 3" class="layer layer-3"></img>
+                                        <img id="image-8" src="/images/carousel/desktop/desktop-layer_3.svg" alt="layer 4" class="layer layer-4"></img>
                                     </div>    
                                     <div class="image-layers">
-                                        <img src="/images/carousel/mobile/mobile-layer_1.svg" alt="layer 1" class="layer layer-1">
-                                        <img src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="layer 2" class="layer layer-2"></img>
-                                        <img src="/images/carousel/desktop/desktop-mask-layer_1.svg" alt="layer 3" class="layer layer-3"></img>
-                                        <img src="/images/carousel/desktop/desktop-layer_3.svg" alt="layer 4" class="layer layer-4"></img>
+                                        <img id="image-9" src="/images/carousel/mobile/mobile-layer_1.svg" alt="layer 1" class="layer layer-1"></img>
+                                        <img id="image-10" src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="layer 2" class="layer layer-2"></img>
+                                        <img id="image-11" src="/images/carousel/desktop/desktop-mask-layer_1.svg" alt="layer 3" class="layer layer-3"></img>
+                                        <img id="image-12" src="/images/carousel/desktop/desktop-layer_3.svg" alt="layer 4" class="layer layer-4"></img>
                                     </div>      
 
                                 </div>
@@ -399,7 +399,7 @@
         /* Carousel  */
         const carouselItems = document.querySelectorAll('.carousel-item');
 
-        carouselItems.forEach(item => {
+        /* carouselItems.forEach(item => {
             item.addEventListener('dragstart', (e) => {
                 e.dataTransfer.setData('text/plain', item.id);
                 // Handle any visual changes like opacity here if needed
@@ -410,7 +410,7 @@
             });
 
             // Optionally handle dragenter, dragover for specific drop zones
-        });
+        }); */
 
         // Change the background color of the navigation bar on scroll
         document.addEventListener('scroll', function () {
