Changed the carousel section AGAIN, added a svg tag . . I don't know what I'm doing right now. TIRED , changed everything in the carousel css file  and told ChatGPT to comment everything so I can learn at the same time.

--- a/index.html
+++ b/index.html
@@ -343,6 +343,16 @@
             </section> -->
 
             <!-- Progression Version 4 -->
+            <!-- SVG definition for clip-path -->
+            <svg width="0" height="0">
+                <defs>
+                    <clipPath id="clip-shape">
+                        <!-- Define your custom shape here -->
+                        <circle cx="50" cy="50" r="40" /> <!-- Example shape -->
+                    </clipPath>
+                </defs>
+            </svg>
+
             <section id="carousel" class="bg-gradient">
                 <div class="container grid">
                     
@@ -359,20 +369,17 @@
                                         <div class="image-layers">
                                             <!-- Left-side images -->
                                             <div class="layer-group left">
-                                                <img src="/images/carousel/desktop/desktop-mask-layer_1.svg" alt="layer 1" class="layer layer-1">
-                                                <img src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="layer 2" class="layer layer-2">
+                                                <img src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="layer 1" class="layer layer-1">
                                             </div> 
                                             <!-- Middle-side images -->
                                             <div class="layer-group middle">
-                                                <img src="/images/carousel/desktop/desktop-mask-layer_1.svg" alt="layer 1" class="layer layer-1">
-                                                <img src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="layer 2" class="layer layer-2">
+                                                <img src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="layer 1" class="layer layer-1">
                                                 <!-- Centered Layer 3 -->
-                                                <img src="/images/carousel/desktop/desktop-layer_3.svg" alt="layer 3" class="layer layer-3 centered-image">
+                                                <img src="/images/carousel/desktop/desktop-layer_3.svg" alt="layer 2" class="layer layer-2 centered-image">
                                             </div> 
                                             <!-- Right-side images -->
                                             <div class="layer-group right">
-                                                <img src="/images/carousel/desktop/desktop-mask-layer_1.svg" alt="layer 1" class="layer layer-1">
-                                                <img src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="layer 2" class="layer layer-2">
+                                                <img src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="layer 1" class="layer layer-1">
                                             </div>
                                         </div>
                                     </div>
