changed the gridarea names + section

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         }
 
         /* Carousel  */
-        const carouselItems = document.querySelectorAll('.carousel-item');
+        /* const carouselItems = document.querySelectorAll('.carousel-item');
 
         carouselItems.forEach(item => {
             item.addEventListener('dragstart', (e) => {
@@ -469,7 +469,7 @@
             });
 
             // Optionally handle dragenter, dragover for specific drop zones
-        });
+        }); */
 
         // Change the background color of the navigation bar on scroll
         document.addEventListener('scroll', function () {
