small changes here and there. Mostly because of 'lighthouse' errors. 'Largest Contentful Paint element 18.850ms'

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
                     <div class="app-features-grid">
                         <div class="app-features-info">
-                            <h2 id="af-title">App Features</h2>
-                            <p id="af-title-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+                            <h2>App Features</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
                         </div>
                     
                         <div class="features-grid">
@@ -350,9 +350,7 @@
                     
                     <div class="c-text container">
                         <h3>Transfers to people from your contact list</h3>
-                        <p>Proin volutpat mollis egestas. Nam luctus facilisis
-                            ultrices. Pellentesque volutpat ligula est. Mattis
-                            fermentum, at nec lacus.</p>
+                        <p>Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
                     </div>
 
                 </div>
