moved text from _app-features.css to _dark-mode.css, deleted some commented settings

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <section id="app-features-section">
                 <div class="container flexit">
 
-                    <img id="af-phone" src="/images/desktop/af-phone.svg" alt="iphone 12 pro">
+                    <img id="af-phone-image" src="/images/desktop/af-phone.svg" alt="iphone 12 pro">
 
                     <div class="af-text-box">
                         <div class="af-text-above">
